2004-10-12  Alexandre Duret-Lutz  <adl@gnu.org>

	* lib/compile: Handle output.obj in addition to output.o.
	* tests/compile.test: Check for this.

2004-10-11  Alexandre Duret-Lutz  <adl@gnu.org>

	* doc/automake.texi (Sources): Typo, reported by Karl Berry.

2004-10-10  Kelley Cook  <kcook@gcc.gnu.org>  (tiny change)
	    Alexandre Duret-Lutz  <adl@gnu.org>

	* aclocal.in ($ac_defun_rx): Match AC_DEFUN_ONCE.
	(trace_used_macros): Trace AC_DEFUN_ONCE.
	* tests/aclocal5.test: Use AC_DEFUN_ONCE.

2004-10-10  Stepan Kasal  <kasal@ucw.cz>  (tiny change)

	* doc/automake.texi (Extending): Typo.

2004-09-29  Alexandre Duret-Lutz  <adl@gnu.org>

	* tests/subobj9.test: Adjust regexes after previous patch.

2004-09-28  Alexandre Duret-Lutz  <adl@gnu.org>

	* automake.in (handle_languages, define_compiler_variable): Output
	Libtool's --tag= option before --mode=compile, because depcomp use
	--mode=compile as end marker for libtool arguments.
	(define_linker_variable): Likewise before --mode=link, for
	uniformity.
	* tests/pr307.test: Make sure dependency files are updated.  That
	was not the case because depcomp thought `--tag=CC' was the
	compiler to get dependencies from.
	Report from Пухальский Юрий Андреевич.

2004-09-25  Alexandre Duret-Lutz  <adl@gnu.org>

	* doc/automake.texi (Clean): Document -local targets.

2004-09-25  Ralf Wildenhues <Ralf.Wildenhues@gmx.de>

	* doc/automake.texi: Typos.

2004-09-21  Alexandre Duret-Lutz  <adl@gnu.org>

	Typos and other English mistakes reported...
	* doc/automake.texi (Timeline): ... by Jim and Gary.
	* NEWS: ... by Richard Dawe.

	* lib/Automake/VarDef.pm (append): Strip comments from augmented
	variables.
	* tests/comment8.test: New file.
	* tests/Makefile.am (TESTS): Add comment8.test.
	Report from Stepan Kasal.

2004-09-20  Alexandre Duret-Lutz  <adl@gnu.org>

	* configure.ac, NEWS: Bump version to 1.9.2a.

2004-09-19  Alexandre Duret-Lutz  <adl@gnu.org>

	* configure.ac, NEWS: Bump version to 1.9.2.
