@@ -1,5 +1,5 @@
 #! /bin/sh
-# Copyright (C) 2003  Free Software Foundation, Inc.
+# Copyright (C) 2003, 2004  Free Software Foundation, Inc.
 #
 # This file is part of GNU Automake.
 #
@@ -34,7 +34,14 @@ EOF
 $ACLOCAL
 $AUTOCONF
 $AUTOMAKE --add-missing
-./configure
+
+# Make sure we do use missing, even if the user exported AUTOCONF.
+# (We cannot export this new value, because it would be used by Automake
+# when tracing, and missing is no good for this.)
+MYAUTOCONF="`pwd`/missing --run $AUTOCONF"
+unset AUTOCONF
+
+./configure AUTOCONF="$MYAUTOCONF"
 $MAKE
 $sleep
 # Hopefully the install version of Autoconf cannot compete with this one...
@@ -43,10 +50,10 @@ $MAKE distdir
 
 # Run again, but without missing, to ensure that timestamps were updated.
 export AUTOMAKE ACLOCAL
-./configure
+./configure AUTOCONF="$MYAUTOCONF"
 $MAKE
 
-# Make sure $MAKE fail when timestamps aren't updated and missing is not used.
+# Make sure $MAKE fails when timestamps aren't updated and missing is not used.
 $sleep
 touch aclocal.m4
 $MAKE && exit 1
