@@ -1,5 +1,13 @@
 2004-10-12  Alexandre Duret-Lutz  <adl@gnu.org>
 
+	* configure.ac: Export @am_AUTOCONF@.
+	* tests/defs.in (AUTOCONF): Define as @am_AUTOCONF@, not @AUTOCONF@,
+	so the test suite runs `autoconf' and not `missing --run autoconf'.
+	* tests/missing.test, tests/missing2.test: Arrange for missing
+	to be used in front of autoconf even if the user has exported
+	AUTOCONF.  This fixes two spurious failures reported by
+	Mark D. Baushke.
+
 	* lib/compile: Handle output.obj in addition to output.o.
 	* tests/compile.test: Check for this.
 
